--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <link rel="stylesheet" href="dist/normalize.css">
   <link rel="stylesheet" href="dist/base.css">
   <link rel="stylesheet" href="dist/main.css">
+  <link rel="stylesheet" href="dist/media.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -37,6 +38,7 @@
           <img src="./src/img/logo.png" alt="">
           <div class="header-logo__text">Здесь бизнес встречает клиентов!</div>
         </div>
+
         <div class="header-menu">
           <a href="#" class="header-menu__link">Кейсы</a>
           <a href="#" class="header-menu__link">Расчет эффективности</a>
@@ -51,7 +53,7 @@
             <a href="tel:+74951112233">+7 495 111 22 33</a>
             <span>Перезвонить вам?</span>
           </div>
-
+          <div class="header-menu__hamburger"><span></span></div>
         </div>
 
       </header>
@@ -91,7 +93,6 @@
           </div>
           <!--END banner-top-advantages-->
         </div>
-
       </div>
       <div class="banner-brand">
         <div class="banner-brand__item">
@@ -115,6 +116,9 @@
         <div class="banner-brand__item">
           <img src="./src/img/banner-brand-7.png" alt="">
         </div>
+      </div>
+      <div class="banner-arrow">
+        <div class="banner-arrow__icon"></div>
       </div>
     </div>
   </section>
