add smooth scroll

--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
         </div>
 
         <div class="header-menu">
-          <a href="#" class="header-menu__link">Кейсы</a>
-          <a href="#" class="header-menu__link">Расчет эффективности</a>
-          <a href="#" class="header-menu__link">Цены</a>
-          <a href="#" class="header-menu__link">Аудит</a>
-          <a href="#" class="header-menu__link">Услуги</a>
-          <a href="#" class="header-menu__link">О нас</a>
+          <a href="#keys" class="header-menu__link">Кейсы</a>
+          <a href="#efficiency" class="header-menu__link">Расчет эффективности</a>
+          <a href="#cost" class="header-menu__link">Цены</a>
+          <a href="#audit" class="header-menu__link">Аудит</a>
+          <a href="#services" class="header-menu__link">Услуги</a>
+          <a href="#about" class="header-menu__link">О нас</a>
         </div>
         <div class="header-info">
           <div class="header-info__logo">
@@ -139,7 +139,7 @@
 
 
   <!--  START section-->
-  <div class="c-section section-results">
+  <div class="c-section section-results" id="keys">
     <div class="layout">
       <div class="section-title">Результаты наших клиентов</div>
       <div class="section-subtitle">Здесь может быть и ваш сайт!</div>
@@ -274,7 +274,7 @@
   <!--  END section-->
 
   <!--  START section-->
-  <div class="c-section section-efficiency">
+  <div class="c-section section-efficiency" id="efficiency">
     <div class="layout">
       <h3 class="section-title">Эффективность вашей рекламы наглядно</h3>
       <div class="efficiency">
@@ -466,7 +466,7 @@
 
 
   <!--  START section-->
-  <div class="c-section section-cost">
+  <div class="c-section section-cost" id="cost">
     <div class="layout">
       <div class="section-cost-decor-1">
         <img src="./src/img/cost-elem-1.png" alt="">
@@ -710,7 +710,7 @@
   <!--  END section-->
 
   <!--  START section-->
-  <div class="c-section section-audit">
+  <div class="c-section section-audit" id="audit">
     <div class="layout">
       <div class="audit">
         <div class="audit-body">
@@ -758,7 +758,7 @@
 
 
   <!--  START section-->
-  <div class="c-section section-services">
+  <div class="c-section section-services" id="services">
     <div class="layout">
       <h3 class="section-title">Наши услуги</h3>
 
@@ -790,7 +790,7 @@
   <!--  END section-->
 
   <!--  START section-->
-  <div class="c-section section-number">
+  <div class="c-section section-number" id="about">
     <div class="layout">
       <h3 class="section-title">ContactGroup в цифрах</h3>
       <div class="number">
@@ -1109,12 +1109,12 @@
   </div>
   <div class="menu-mobile__body">
     <div class="header-menu">
-      <a href="#" class="header-menu__link">Кейсы</a>
-      <a href="#" class="header-menu__link">Расчет эффективности</a>
-      <a href="#" class="header-menu__link">Цены</a>
-      <a href="#" class="header-menu__link">Аудит</a>
-      <a href="#" class="header-menu__link">Услуги</a>
-      <a href="#" class="header-menu__link">О нас</a>
+      <a href="#keys" class="header-menu__link">Кейсы</a>
+      <a href="#efficiency" class="header-menu__link">Расчет эффективности</a>
+      <a href="#cost" class="header-menu__link">Цены</a>
+      <a href="#audit" class="header-menu__link">Аудит</a>
+      <a href="#services" class="header-menu__link">Услуги</a>
+      <a href="#about" class="header-menu__link">О нас</a>
     </div>
   </div>
   <div class="menu-mobile__footer">
