--- a/index.html
+++ b/index.html
@@ -1241,19 +1241,32 @@
             <div class="team-row-item row">
               <div class="team-row-item__box">
                 <!-- START team-card-->
-                <div class="team-card horizontal">
-
-                </div>
-                <!-- END team-card-->
-              </div>
-              <div class="team-row-item__box">
-                <!-- START team-card-->
-                <div class="team-card horizontal" style="background: #f2f2f0 url('./src/img/photo-1.png') 90% 100% no-repeat">
+                <div class="team-card horizontal" style="background: #fdfdfb url('./src/img/photo-1.jpg') 90% 100% no-repeat">
                   <div class="team-card__wrapper">
                     <div class="team-card__body">
                       <div class="team-card__head">
                         <div class="team-card__name">Артем Иванов</div>
                         <div class="team-card__position">Ведущий разработчик</div>
+                      </div>
+                      <div class="team-card__quote">"Любой каприз за ваши деньги"</div>
+                    </div>
+                    <ul class="team-card__list">
+                      <li>Знает все популярные CMS</li>
+                      <li>Сертифицированный специалист Битрикс</li>
+                      <li>Автор 10 модулей на Битрикс.Маркетплейс</li>
+                    </ul>
+                  </div>
+                </div>
+                <!-- END team-card-->
+              </div>
+              <div class="team-row-item__box">
+                <!-- START team-card-->
+                <div class="team-card horizontal" style="background: #f8f8f5 url('./src/img/photo-1-2.jpg') 90% 100% no-repeat">
+                  <div class="team-card__wrapper">
+                    <div class="team-card__body">
+                      <div class="team-card__head">
+                        <div class="team-card__name">Игорь Хныков </div>
+                        <div class="team-card__position">Программист</div>
                       </div>
                       <div class="team-card__quote">"Любой каприз за ваши деньги"</div>
                     </div>
@@ -1272,7 +1285,7 @@
             <div class="team-row-item col">
               <div class="team-row-item__box">
                 <!-- START team-card-->
-                <div class="team-card column" style="background: #f2f2f0 url('./src/img/photo-2.png') 100% 100% no-repeat">
+                <div class="team-card column" style="background: #f8f7f5 url('./src/img/photo-1-3.jpg') 100% 100% no-repeat">
 
                   <div class="team-card__wrapper">
                     <div class="team-card__body">
@@ -1293,7 +1306,24 @@
                 <!-- END team-card-->
               </div>
               <div class="team-row-item__box">
-                <div class="team-card"></div>
+                <div class="team-card column" style="background: #f8f7f5 url('./src/img/photo-1-4.jpg') 100% 100% no-repeat">
+
+                  <div class="team-card__wrapper">
+                    <div class="team-card__body">
+                      <div class="team-card__head">
+                        <div class="team-card__name">Артем Иванов</div>
+                        <div class="team-card__position">Ведущий разработчик</div>
+                      </div>
+                      <div class="team-card__quote">"Эй,Брейн, чем мы будем заниматься сегодня вечером?" </div>
+                      <div class="team-card__quote">Тем же, чем и всегда, Пинки!</div>
+                    </div>
+                  </div>
+                  <ul class="team-card__list">
+                    <li>Знает все популярные CMS</li>
+                    <li>Сертифицированный специалист Битрикс</li>
+                    <li>Автор 10 модулей на Битрикс.Маркетплейс</li>
+                  </ul>
+                </div>
               </div>
             </div>
             <!-- END team-row-item-->
@@ -1303,7 +1333,7 @@
             <div class="team-row-item col">
               <div class="team-row-item__box">
                 <!-- START team-card-->
-                <div class="team-card column" style="background: #f2f2f0 url('./src/img/photo-2.png') 100% 100% no-repeat">
+                <div class="team-card column" style="background: #f8f7f5 url('./src/img/photo-1-5.jpg') 100% 100% no-repeat">
 
                   <div class="team-card__wrapper">
                     <div class="team-card__body">
@@ -1324,7 +1354,24 @@
                 <!-- END team-card-->
               </div>
               <div class="team-row-item__box">
-                <div class="team-card"></div>
+                <div class="team-card column" style="background: #f8f7f5 url('./src/img/photo-1-6.jpg') 100% 100% no-repeat">
+
+                  <div class="team-card__wrapper">
+                    <div class="team-card__body">
+                      <div class="team-card__head">
+                        <div class="team-card__name">Станислав Цветков</div>
+                        <div class="team-card__position">Интернет-маркетолог</div>
+                      </div>
+                      <div class="team-card__quote">"Эй,Брейн, чем мы будем заниматься сегодня вечером?" </div>
+                      <div class="team-card__quote">Тем же, чем и всегда, Пинки!</div>
+                    </div>
+                  </div>
+                  <ul class="team-card__list">
+                    <li>Знает все популярные CMS</li>
+                    <li>Сертифицированный специалист Битрикс</li>
+                    <li>Автор 10 модулей на Битрикс.Маркетплейс</li>
+                  </ul>
+                </div>
               </div>
             </div>
             <!-- END team-row-item-->
@@ -1332,14 +1379,27 @@
             <div class="team-row-item row">
               <div class="team-row-item__box">
                 <!-- START team-card-->
-                <div class="team-card horizontal">
-
+                <div class="team-card horizontal" style="background: #f8f7f5 url('./src/img/photo-1-7.jpg') 90% 100% no-repeat">
+                  <div class="team-card__wrapper">
+                    <div class="team-card__body">
+                      <div class="team-card__head">
+                        <div class="team-card__name">Ale Geal</div>
+                        <div class="team-card__position">#тыждизайнер</div>
+                      </div>
+                      <div class="team-card__quote">"90% дизайнеров симулирую креатив" группа британских ученых </div>
+                    </div>
+                    <ul class="team-card__list">
+                      <li>Знает все популярные CMS</li>
+                      <li>Сертифицированный специалист Битрикс</li>
+                      <li>Автор 10 модулей на Битрикс.Маркетплейс</li>
+                    </ul>
+                  </div>
                 </div>
                 <!-- END team-card-->
               </div>
               <div class="team-row-item__box">
                 <!-- START team-card-->
-                <div class="team-card horizontal" style="background: #f2f2f0 url('./src/img/photo-1.png') 90% 100% no-repeat">
+                <div class="team-card horizontal" style="background: #f8f7f5 ">
                   <div class="team-card__wrapper">
                     <div class="team-card__body">
                       <div class="team-card__head">
@@ -1367,7 +1427,7 @@
 
           <div class="swiper-wrapper team-mobile-slider">
             <div class="swiper-slide team-mobile-slider__item">
-              <div class="team-card column" style="background: #f2f2f0 url('./src/img/photo-2.png') 100% 100% no-repeat">
+              <div class="team-card column" style="background: #fdfdfb url('./src/img/photo-mobile-1.jpg') 100% 100% no-repeat">
 
                 <div class="team-card__wrapper">
                   <div class="team-card__body">
@@ -1387,7 +1447,7 @@
               </div>
             </div>
             <div class="swiper-slide team-mobile-slider__item">
-              <div class="team-card column" style="background: #f2f2f0 url('./src/img/photo-2.png') 100% 100% no-repeat">
+              <div class="team-card column" style="background: #fdfdfb url('./src/img/photo-mobile-2.jpg') 100% 100% no-repeat">
 
                 <div class="team-card__wrapper">
                   <div class="team-card__body">
@@ -1407,7 +1467,87 @@
               </div>
             </div>
             <div class="swiper-slide team-mobile-slider__item">
-              <div class="team-card column" style="background: #f2f2f0 url('./src/img/photo-2.png') 100% 100% no-repeat">
+              <div class="team-card column" style="background: #f8f7f5 url('./src/img/photo-mobile-3.jpg') 100% 100% no-repeat">
+
+                <div class="team-card__wrapper">
+                  <div class="team-card__body">
+                    <div class="team-card__head">
+                      <div class="team-card__name">Артем Иванов</div>
+                      <div class="team-card__position">Ведущий разработчик</div>
+                    </div>
+                    <div class="team-card__quote">"Эй,Брейн, чем мы будем заниматься сегодня вечером?" </div>
+                    <div class="team-card__quote">Тем же, чем и всегда, Пинки!</div>
+                  </div>
+                </div>
+                <ul class="team-card__list">
+                  <li>Знает все популярные CMS</li>
+                  <li>Сертифицированный специалист Битрикс</li>
+                  <li>Автор 10 модулей на Битрикс.Маркетплейс</li>
+                </ul>
+              </div>
+            </div>
+            <div class="swiper-slide team-mobile-slider__item">
+              <div class="team-card column" style="background: #fdfdfb url('./src/img/photo-mobile-4.jpg') 100% 100% no-repeat">
+
+                <div class="team-card__wrapper">
+                  <div class="team-card__body">
+                    <div class="team-card__head">
+                      <div class="team-card__name">Артем Иванов</div>
+                      <div class="team-card__position">Ведущий разработчик</div>
+                    </div>
+                    <div class="team-card__quote">"Эй,Брейн, чем мы будем заниматься сегодня вечером?" </div>
+                    <div class="team-card__quote">Тем же, чем и всегда, Пинки!</div>
+                  </div>
+                </div>
+                <ul class="team-card__list">
+                  <li>Знает все популярные CMS</li>
+                  <li>Сертифицированный специалист Битрикс</li>
+                  <li>Автор 10 модулей на Битрикс.Маркетплейс</li>
+                </ul>
+              </div>
+            </div>
+            <div class="swiper-slide team-mobile-slider__item">
+              <div class="team-card column" style="background: #fdfdfb url('./src/img/photo-mobile-5.jpg') 100% 100% no-repeat">
+
+                <div class="team-card__wrapper">
+                  <div class="team-card__body">
+                    <div class="team-card__head">
+                      <div class="team-card__name">Артем Иванов</div>
+                      <div class="team-card__position">Ведущий разработчик</div>
+                    </div>
+                    <div class="team-card__quote">"Эй,Брейн, чем мы будем заниматься сегодня вечером?" </div>
+                    <div class="team-card__quote">Тем же, чем и всегда, Пинки!</div>
+                  </div>
+                </div>
+                <ul class="team-card__list">
+                  <li>Знает все популярные CMS</li>
+                  <li>Сертифицированный специалист Битрикс</li>
+                  <li>Автор 10 модулей на Битрикс.Маркетплейс</li>
+                </ul>
+              </div>
+            </div>
+            <div class="swiper-slide team-mobile-slider__item">
+              <div class="team-card column" style="background: #fdfdfb url('./src/img/photo-mobile-6.jpg') 100% 100% no-repeat">
+
+                <div class="team-card__wrapper">
+                  <div class="team-card__body">
+                    <div class="team-card__head">
+                      <div class="team-card__name">Артем Иванов</div>
+                      <div class="team-card__position">Ведущий разработчик</div>
+                    </div>
+                    <div class="team-card__quote">"Эй,Брейн, чем мы будем заниматься сегодня вечером?" </div>
+                    <div class="team-card__quote">Тем же, чем и всегда, Пинки!</div>
+                  </div>
+                </div>
+                <ul class="team-card__list">
+                  <li>Знает все популярные CMS</li>
+                  <li>Сертифицированный специалист Битрикс</li>
+                  <li>Автор 10 модулей на Битрикс.Маркетплейс</li>
+                </ul>
+              </div>
+            </div>
+            <div class="swiper-slide team-mobile-slider__item">
+              <div class="team-card column" style="background: #fdfdfb url('./src/img/photo-mobile-7.jpg') 100% 100% no-repeat">
 
                 <div class="team-card__wrapper">
                   <div class="team-card__body">
